--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               </div>
             </div>
             
-            <!-- Contact Form
+            <!-- Contact Form -->
             <div class="card">
               <div class="card-content">
                 <h3>Send Me a Message</h3>
@@ -501,7 +501,7 @@
           </div>
         </div>
       </section>
-    </main> -->
+    </main>
     
     <!-- Footer -->
     <footer class="footer">
